[package]
name = "mrt"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
once_cell = "1.13.1"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[profile.release]
strip = "symbols"
lto = true
panic = 'abort'
