[package]
name = "mrt"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
big_s = "1.0.2"
camino = "1.1.1"
colored = "2.0.0"
ctrlc = "3.2.3"
once_cell = "1.13.1"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
walkdir = "2.3.2"

[dev-dependencies]
cucumber = "0.14"
pretty = { package = "pretty_assertions", version = "1.3.0" }
tokio = { version = "1.21.2", features = ["fs", "macros", "process"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
